# Lexiques

./: .toolbox.py.swp  README.md  sentences_detailed.csv.REMOVED.git-id  sentences_detailed.tar.bz2.REMOVED.git-id  toolbox.py
..bfg-report/2017-06-25/00-17-57/: cache-stats.txt  object-id-map.old-new.txt
..bfg-report/2017-06-25/00-17-57/protected-dirt/: dae34cbe-HEAD.csv
..bfg-report/2017-06-25/02-23-58/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
LEFFF/: lefff-2.1_utf8_characters.txt  mot_avec_espace.txt
LEFFF/lefff-3.4/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  adj.ilex  adj.mf  adj_frwiktionary.ilex  adj_frwiktionary.mf  adj_pour.ilex  adjective_prolex.ilex  adv.ilex  adv.mf  alexina-makefile  amlgm  avoirC1pC2.ilex  avoirN1pC2.ilex  configure  configure.ac  conj.ilex  conj.mf  conj_new.ilex  constructions  coord.ilex  coord.mf  det.ilex  det.mf  dicovalence_100625.ilex  emea-fr-dev+test.MElt.lemmatized.ilex  emea-fr-dev.MElt.lemmatized.ilex  emea-fr-train.tcs.MElt.lemmatized.ilex  entnom.ilex  etrePrepX.ilex  etrePrepX.mf  ftb4v6_ms_1.brown.28.new.ilex  ftb4v6_ms_all.brown.28.new.ilex  interj.ilex  interj.mf  leurres.ilex  morpho.fr  neg.ilex  (+27 more)
Lexique381/: tmp1.txt
Traitement_Ressources/: .il-mange-une-pomme.txt.icloud  ETF.py  OptimString.py  Parser.py  Parser_LambdaCalculus_parsetab.py  Parser_Lefffinterpreteur_parsetab.py  alignements.py  clustering.py  combinations.py  grammar.fcfg  grammar0.fcfg  image-similarity.py  lambda_calculus.py  lefff_syntaxe.py  leveque-korantin_lambas.py  logique.py  nltk_fcfg.py  regex.txt  temp.py  test.txt  test1.html  tmp.txt  tmp1.txt  traitement_ressources.py  unification.py
